Implement CockroachDB preset
